--- a/QualEndereco/BuscarCEP/.classpath
+++ b/QualEndereco/BuscarCEP/.classpath
@@ -6,5 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="src/cep/Atxy2k.jar"/>
+	<classpathentry kind="lib" path="src/cep/dom4j-2.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
